--- a/package.json
+++ b/package.json
@@ -8,5 +8,15 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@babel/cli": "^7.28.0",
+    "@babel/core": "^7.28.0",
+    "@babel/node": "^7.28.0",
+    "@babel/preset-env": "^7.28.0"
+  },
+  "dependencies": {
+    "body-parser": "^2.2.0",
+    "nodemon": "^3.1.10"
+  }
 }
