--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "event-management-api",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "sawan",
   "license": "ISC",
   "description": "",
   "devDependencies": {
@@ -17,6 +18,7 @@
   },
   "dependencies": {
     "body-parser": "^2.2.0",
+    "dotenv": "^17.2.0",
     "nodemon": "^3.1.10"
   }
 }
